# ProjectManagement

./: Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
app/auth_mgmt/: apps.py  models.py  signals.py  tasks.py  utlis.py
app/auth_mgmt/api/v1/: urls.py  (+2 more)
app/auth_mgmt/migrations/: 0001_initial.py  0002_remove_customuser_groups.py  0003_customuser_groups_customuser_user_permissions.py
app/projectflow_app/: apps.py
app/report_app/: apps.py
app/resource_app/: apps.py
app/task_app/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
app/task_app/migrations/: 0001_initial.py  0002_task_project.py  0003_alter_task_assigned_to_alter_task_created_by.py  0004_alter_task_assigned_to.py  0005_remove_task_assigned_to_remove_task_created_by_and_more.py  0006_task_assigned_to_task_created_by_taskcomment_author.py  0007_task_user.py  0008_rename_content_taskcomment_comment.py  0009_rename_comment_taskcomment_co_alter_task_user.py  0010_rename_co_taskcomment_comment.py  0011_efforts_employeeassign.py  0012_efforts_task.py  0013_remove_employeeassign_efforts_and_more.py  0014_task_dependencies_task_parent_task_collaboration_and_more.py  0015_label_remove_collaboration_comment_and_more.py  0016_remove_usersettings_language_usersettings_status_and_more.py  0017_alter_label_name.py  0018_remove_collaboration_labels_delete_label_and_more.py  0019_task_timezone.py
app/timetrack_app/: admin.py  apps.py  models.py  serailizers.py  urls.py  views.py
common/utils/: common_utlis.py
project/: urls.py
project/settings/: __init__.py  base.py  local.py
(+1 files in other folders)
